--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.0",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "~4.1.5"
 	},
@@ -41,6 +43,8 @@
 		"@types/react": "^16.14.13",
 		"@types/react-dom": "^16.9.14",
 		"@types/react-redux": "^7.1.18",
+		"@types/react-router": "^5.1.16",
+		"@types/react-router-dom": "^5.1.8",
 		"autoprefixer": "^9.8.6",
 		"craco-alias": "^3.0.1",
 		"postcss": "^7.0.36",
