--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,8 @@
 		"paths": {
 			"@components/*": ["./components/*"],
 			"@pages/*": ["./pages/*"],
+			"@images/*": ["./assets/images/*"],
+			"@image-components/*": ["./utility/images.js"],
 			"@features": ["./features/*"]
 		}
 	}
