--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
 			"@pages/*": ["./pages/*"],
 			"@images/*": ["./assets/images/*"],
 			"@image-components/*": ["./utility/images.js"],
-			"@features": ["./features/*"]
+			"@features": ["./features/*"],
+			"@hooks": ["./hooks/*"]
 		}
 	}
 }
